--- a/src/components/card-list/card-list.scss
+++ b/src/components/card-list/card-list.scss
@@ -1,6 +1,7 @@
 .card-list {
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    // grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     grid-gap: 20px;
 }
