--- a/src/components/CardList/card-list.scss
+++ b/src/components/CardList/card-list.scss
@@ -1,4 +1,4 @@
-.card-list {
+.item-list {
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
