--- a/src/components/SearchBox/search-box.scss
+++ b/src/components/SearchBox/search-box.scss
@@ -1,9 +1,8 @@
 .search {
-    -webkit-appearance: none;
-    border: none;
-    outline: none;
     padding: 10px;
-    width: 150px;
-    line-height: 30px;
+    width: 250px;
+    text-align: center;
+    margin-top: 30px;
     margin-bottom: 30px;
+    font-size: 20px;
 }
